<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WebServiceTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="datos_de_entrada">Datos de entrada</string>
    <string name="selecciona_el_tipo_de_conversi_n">Selecciona el tipo de conversión</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="result_">Result:</string>
    <string name="start_web_service_2">Start web Service 2</string>
    <string name="title_activity_ws">WS</string>
    <string name="prueba_no_2">Prueba No. 2</string>
    <string name="buscar">Buscar</string>
    <string name="title_activity_json">JSONActivity</string>
    <string name="json_test">JSON Test</string>
    <string name="title_activity_jsonweb_service_consumer">JSONWebServiceConsumer</string>
    <string name="start_search">Start Search</string>

</resources>